fixed footer and spacing

--- a/src/styles/newstyles.css
+++ b/src/styles/newstyles.css
@@ -280,7 +280,7 @@ main {
 
 .boulder-co {
   align-self: flex-start;
-  flex: 1;
+  /* flex: 1; */
   padding-top: 40vh;
   font-family: "Clash Grotesk", sans-serif;
   font-size: 1.5rem;
@@ -291,6 +291,7 @@ main {
   text-decoration: none;
   touch-action: manipulation;
   -webkit-tap-highlight-color: transparent;
+  /* width: auto; */
 }
 
 footer {
@@ -300,7 +301,7 @@ footer {
   left: 1rem;
   right: 1rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   font-size: 0.8rem;
 }
 
